--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="layouts/css/styles.css" rel="stylesheet" />
     <script src="scripts/main.js" defer></script>
 </head>
-<body class="min-h-screen bg-green-900 dark:bg-black dark:text-white">
+<body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
     <header class="bg-green-900 text-white sticky top-0 z-10">
         <section class="max-w-5xl mx-auto p-4 flex justify-between items-center">
           <h1 class="text-3xl font-medium">
@@ -107,7 +107,7 @@
           About Me
         </h2>
         
-        <article class="flex flex-col justify-center sm:flex-row p-6 my-6">
+        <article class="flex flex-col justify-center items-center sm:flex-row p-6 my-6">
             <img
             class="w-1/2 rounded-lg"
             src="./layouts/images/harbor.jpeg"
@@ -135,7 +135,7 @@
             </div>
         </article>
 
-        <article class="flex flex-col-reverse justify-center sm:flex-row">
+        <article class="flex flex-col-reverse justify-center items-center sm:flex-row">
             <div class="mx-6">
                 <h3
                 class="md:text-4xl text-center text-3xl sm:text-left text-slate-900 dark:text-white font-bold p-3"
@@ -178,11 +178,11 @@
         </h2>
         <article>
             <h3
-              class="max-w-md md:text-4xl text-3xl text-center sm:text-left text-slate-900  dark:text-white font-bold"
+              class="sm:text-4xl text-3xl text-center sm:text-left text-slate-900  dark:text-white font-bold"
             >
               Purpose of this site
             </h3>
-            <p class="md:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
+            <p class="sm:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
               Like many (probably most) K12 computer science teachers, I did not
               have a background in CS. For the last 3 years, I have been learning
               CS concepts and testing various instructional resources.
@@ -196,11 +196,11 @@
               context to the code.
             </p>
             <h3
-              class="max-w-md md:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
+              class="sm:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
             >
               Why I wanted to build it
             </h3>
-            <p class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
+            <p class="sm:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
               Computer science has become a fascination for me. I have enjoyed
               learning new aspects about CS to then share with my students. I
               naturally like to build things, and creating software has been very
@@ -218,18 +218,30 @@
         id="github"
         class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height"
       >
-        <h2
-          class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white"
-        >
-          GitHub
-        </h2>
+        <div class="flex flex-col-reverse p-6 mx-12 sm:flex-row items-center justify-center">
+          <img
+            class="max-w-60 w-1/2 px-10 rounded-lg items-center hidden dark:block"
+            src="./layouts/images/github-mark-white.png"
+            alt="github logo"
+          />
+          <img
+            class="max-w-60 w-1/2 px-10 rounded-lg items-center block dark:hidden"
+            src="./layouts/images/github-mark.png"
+            alt="github logo"
+          />
+          <h2
+            class="text-4xl font-bold text-center content-center sm:text-5xl sm:text-left mb-6 text-slate-900 dark:text-white"
+          >
+            GitHub
+          </h2>
+        </div>
         <article>
             <h3
-              class="max-w-md md:text-4xl text-3xl text-center sm:text-left text-slate-900  dark:text-white font-bold"
+              class="sm:text-4xl text-3xl text-center sm:text-left text-slate-900  dark:text-white font-bold"
             >
               What is GitHub?
             </h3>
-            <p class="md:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
+            <p class="sm:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
               GitHub provides repository storage for code.  It is the primary location for storing all open source code.  
               It also provides version control for programming, so even code that is not open source is stored on GitHub.  
               It is such and important part of software development that MicroSoft purchased GitHub in 2018 to help insure that it will be maintained.  
@@ -241,12 +253,13 @@
               Having experience with GitHub is an important skill in the software development market.  
             </p>
             <h3
-              class="max-w-md md:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
+              class="sm:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
             >
               My GitHub
             </h3>
-            <a href="https://github.com/drewray80" target="_blank" class="text-blue">github.com/drewray80</a>            
-            <p class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
+            <a href="https://github.com/drewray80" target="_blank" class="text-center text-lg sm:text-left sm:text-xl text-blue-900 dark:text-blue-600">github.com/drewray80</a>  
+                      
+            <p class="sm:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
               In my github account, I store educational resources and personal projects.  
               The educational resources are stored there for other teachers to have access, and to have a central location for my own storage. It has also been a good source for learning for me to use the platform with a real goal and purpose.  
               <br><br>
