--- a/index.html
+++ b/index.html
@@ -161,7 +161,28 @@
                 alt="canal at sunset"
                 />
           </article>
-          
+          <!--testimonials-->
+          <!--<figure class="my-12">
+            <blockquote
+              class="bg-teal-600 dark:bg-black pl-14 pr-8 py-12 rounded-3xl relative"
+            >
+              <p class="text-2xl sm:3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:-translate-x-2 after:-translate-y-2">
+              
+                Jupyter Notebooks that will run Python on a Google server through
+                a browser. This allows us to work on colabs from
+                <span class="italic">any device</span> with internet.
+
+                Even free tier colabs has access to some &#8212;
+              <span class="italic">Google GPUs and TPUs</span> &#8212; that are
+              capable of <q class="italic">running AI models</q>.
+              </p>
+            </blockquote>
+            <figcaption
+              class="italic text-xl sm:text-2xl text-right mt-2 text-slate-500 dark:text-slate-400"
+            >
+              &#8212; Including school Chromebooks
+            </figcaption>
+          </figure> -->
       </section>
 
       <hr class="mx-auto bg-black dark:bg-white w-1/2" />
