--- a/educationalResources.html
+++ b/educationalResources.html
@@ -12,7 +12,7 @@
 
   <body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
     <header class="bg-green-900 text-white sticky top-0 z-10">
-      <section class="max-w-5xl mx-auto p-4 flex justify-between items-center">
+      <section class="max-w-6xl mx-auto p-4 flex justify-between items-center">
         <h1 class="text-3xl font-medium">
           <a href="#hero">🎓 Educational Resources</a>
         </h1>
@@ -26,10 +26,11 @@
               class="bg-white w-8 h-1 rounded absolute top-4 -mt-0.5 transition-all duration-500 before:content-[''] before:bg-white before:w-8 before:h-1 before:rounded before:absolute before:-translate-x-4 before:-translate-y-3 before:transition-all before:duration-500 after:content-[''] after:bg-white after:w-8 after:h-1 after:rounded after:absolute after:-translate-x-4 after:translate-y-3 after:transition-all after:duration-500"
             ></div>
           </button>
-          <nav class="hidden md:block space-x-8 text-xl" aria-label="main">
+          <nav class="hidden md:block space-x-6 text-xl" aria-label="main">
             <a href="index.html" class="hover:opacity-80">Home Page</a>
             <a href="#hardware" class="hover:opacity-80">Hardware</a>
             <a href="#colabs" class="hover:opacity-80">Colabs</a>
+            <a href="#microbits" class="hover:opacity-80">Micro:bits</a>
             <a href="#linuxCyber" class="hover:opacity-80">Linux/Cyber</a>
             <a href="#hero" class="hover:opacity-80">Top</a>
           </nav>
@@ -54,6 +55,9 @@
           >
           <a href="#colabs" class="w-full text-center py-6 hover:opacity-90"
             >Colabs</a
+          >
+          <a href="#microbits" class="w-full text-center py-6 hover:opacity-90"
+            >Micro:bits</a
           >
           <a href="#linuxCyber" class="w-full text-center py-6 hover:opacity-90"
             >Linux/Cyber</a
@@ -241,6 +245,35 @@
 
       <hr class="mx-auto bg-black dark:bg-white w-1/2" />
 
+      <!-- microbits -->
+      <section
+        id="microbits"
+        class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height"
+      >
+      <div class="flex flex-col-reverse sm:flex-row items-center justify-center">
+        <h2
+          class="text-4xl font-bold text-center content-center sm:text-5xl mb-6 text-slate-900 dark:text-white"
+        >
+          <a href="https://microbit.org/" target="_blank" class="text-blue-500">Micro:bits</a>
+        </h2>
+        <img
+          class="w-2/5 px-10 rounded-3xl items-center "
+          src="./layouts/images/microbit_smile.webp"
+          alt="microbit smile gif"
+        />
+      </div>
+        <p class="sm:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
+          <a href="https://github.com/drewray80/microbits" target="_blank" class="text-blue-500">github.com/drewray80/microbits</a>
+          <br><br>
+          As a high school computer science teacher, I really enjoy using microbits in my classes. They offer lots of opportunities for students to learn programming using physical computing.
+          <br><br>
+          Microbits have buttons, tons of sensors, leds, a small speaker, radio transmitter and receiver, accelerometer...
+          They can also be used as a microcontroller for other devices. In my classes, we use them to control Sphero RVR+ robots.
+          They are a lot of fun and have many possibilities for students of all ages and ability levels.
+          <br><br>
+          The github repo in the link above was created to share how I use microbits in my courses to other teachers, in case the information is useful to someone else. 
+        </p>
+      </section>
       <section
         id="linuxCyber"
         class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height"
@@ -250,7 +283,7 @@
         >
           Linux/Cyber Unit
         </h2>
-        <p>
+        <p class="sm:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
           <a href="https://github.com/drewray80/linux_cyber_unit" target="_blank" class="text-blue-500">github.com/drewray80/linux_cyber_unit</a>
           <br><br>
           In my intro to programming course, I have a brief unit on Linux and cyber security.  
